# fastapi-mongodb-app

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.dev.yml  pyproject.toml
docker/: dev.Dockerfile
server/: main.py
server/app/auth/: apis.py  auth.py  exceptions.py  schemas.py  services.py
server/app/users/: apis.py  exceptions.py  schemas.py  services.py
server/core/: database.py  exceptions.py  routers.py  schemas.py  settings.py  utils.py
