[tool.poetry]
name = "fastapi-mongodb-app"
version = "0.1.0"
description = ""
authors = ["mohadese-yousefi <mohadeseyusefi1997@gmail.com>"]
readme = "README.md"
packages = [{include = "fastapi_mongodb_app"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.101.0"
uvicorn = "^0.23.2"
passlib = "^1.7.4"
pyjwt = "^2.8.0"
motor = "^3.2.0"
python-multipart = "^0.0.6"
minio = "^7.1.15"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
